--- a/4_Функції.ipynb
+++ b/4_Функції.ipynb
@@ -1,21 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "4_Функції",
-      "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -50,6 +33,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -57,10 +41,24 @@
         "id": "MxeAZwX1FFeu",
         "outputId": "055091a0-9f6b-40fe-faf7-ad6f6a483af1"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Потрібне число від 0 до 10.\n",
+            "Потрібне число від 0 до 10.\n",
+            "Потрібне число від 0 до 10.\n",
+            "Потрібне число від 0 до 10.\n",
+            "Результати обчислення значень виразу:\n",
+            "[5, 1, 1, 10, 5, 26, 17, 37, 26, 5]\n"
+          ]
+        }
+      ],
       "source": [
         "# вам треба дописати/змінити цей блок коду\n",
         "def sqrPlus1(x):\n",
-        "  return ...\n",
+        "  return x ** 2 +1\n",
         "# кінець вашого коду\n",
         "\n",
         "numbers=[]\n",
@@ -70,54 +68,18 @@
         "    x = int(input(str(n)+\" - введіть число від 0 до 10:\"))\n",
         "\n",
         "    # вам треба дописати/змінити цей блок коду\n",
-        "    if ... :\n",
+        "    if 0 <= x <= 10:\n",
+        "            numbers.append(sqrPlus1(x))\n",
+        "            n += 1\n",
         "    # кінець вашого коду\n",
         "    \n",
-        "      numbers.append(sqrPlus1(x))\n",
         "    else:\n",
-        "      print(\"Потрібне число від 0 до 10!\")\n",
+        "            print(\"Потрібне число від 0 до 10.\")\n",
         "  else:\n",
-        "    break\n",
-        "  n = n + 1\n",
-        "numbers"
-      ],
-      "execution_count": 41,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "1 - введіть число від 0 до 10:2\n",
-            "2 - введіть число від 0 до 10:5\n",
-            "3 - введіть число від 0 до 10:0\n",
-            "4 - введіть число від 0 до 10:3\n",
-            "5 - введіть число від 0 до 10:-5\n",
-            "Потрібне число від 0 до 10!\n",
-            "6 - введіть число від 0 до 10:2\n",
-            "7 - введіть число від 0 до 10:1\n",
-            "8 - введіть число від 0 до 10:3\n",
-            "9 - введіть число від 0 до 10:0\n",
-            "10 - введіть число від 0 до 10:1\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[Ellipsis,\n",
-              " Ellipsis,\n",
-              " Ellipsis,\n",
-              " Ellipsis,\n",
-              " Ellipsis,\n",
-              " Ellipsis,\n",
-              " Ellipsis,\n",
-              " Ellipsis,\n",
-              " Ellipsis]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 41
-        }
+        "        break\n",
+        "\n",
+        "print(\"Результати обчислення значень виразу:\")\n",
+        "print(numbers)"
       ]
     },
     {
@@ -140,6 +102,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -147,12 +110,29 @@
         "id": "n9zDmRTzIfhe",
         "outputId": "f3bbc22f-5354-4172-8a54-5eebe6844b4a"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1 Додати числа\n",
+            "2 Відняти числа\n",
+            "3 Перемножити числа\n",
+            "4 Поділити числа\n",
+            "5 завершити роботу\n",
+            "Додавання: 8\n",
+            "Множення: 15\n",
+            "Додавання: 8\n",
+            "Ділення 1.6666666666666667\n"
+          ]
+        }
+      ],
       "source": [
         "# вам треба дописати/змінити цей блок коду\n",
-        "add = ...\n",
-        "sub = ...\n",
-        "mul = ...\n",
-        "div = ...\n",
+        "add = lambda x, y: x + y\n",
+        "sub = lambda x, y: x - y\n",
+        "mul = lambda x, y: x * y\n",
+        "div = lambda x, y: x / y if y != 0 else 0\n",
         "# кінець вашого коду\n",
         "\n",
         "\n",
@@ -178,39 +158,12 @@
         "  elif selection == '3':\n",
         "    print(\"Множення:\",mul(a, b))\n",
         "  elif selection == '4': \n",
-        "    print(\"Ділення\",div(a, b))\n",
+        "    print(\"Ділення:\",div(a, b))\n",
         "  elif selection == '5': \n",
         "    break\n",
         "  else: \n",
         "    print (\"Невідома операція!\")\n",
         "\n"
-      ],
-      "execution_count": 23,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Введіть перше число:12\n",
-            "Введіть друге число:2\n",
-            "1 Додати числа\n",
-            "2 Відняти числа\n",
-            "3 Перемножити числа\n",
-            "4 Поділити числа\n",
-            "5 завершити роботу\n",
-            "Оберіть операцію:1\n",
-            "Додавання: 14\n",
-            "Оберіть операцію:2\n",
-            "Віднімання: 10\n",
-            "Оберіть операцію:3\n",
-            "Множення: 24\n",
-            "Оберіть операцію:4\n",
-            "Ділення 6.0\n",
-            "Оберіть операцію:6\n",
-            "Невідома операція!\n",
-            "Оберіть операцію:5\n"
-          ]
-        }
       ]
     },
     {
@@ -233,6 +186,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -240,39 +194,67 @@
         "id": "wFZR9BjLNH8S",
         "outputId": "81240b97-8b06-4f44-c9e3-e5619a2ed03b"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Агрегат: реактор\n",
+            "\tОбрана операція: стоп\n",
+            "\tПриоритет: високий\n",
+            "Агрегат: реактор\n",
+            "\tОбрана операція: запуск\n",
+            "\tПриоритет: високий\n",
+            "Агрегат: реактор\n",
+            "\tОбрана операція: стоп\n",
+            "\tПриоритет: звичайний\n",
+            "Агрегат: реактор\n",
+            "\tОбрана операція: запуск\n",
+            "\tПриоритет: звичайний\n"
+          ]
+        }
+      ],
       "source": [
         "# вам треба дописати/змінити цей блок коду\n",
-        "def controlEngine(...):\n",
+        "def controlEngine(id, name, operation=\"стоп\", priority=\"високий\"):\n",
+        "    print(\"Агрегат:\", name)\n",
+        "    print(\"\\tОбрана операція:\", operation)\n",
+        "    print(\"\\tПриоритет:\", priority)\n",
         "# кінець вашого коду\n",
         "\n",
-        "  print('Агрегат:',name, '#',id, \"\\n\\tОбрана операція:\", operation ,\"\\n\\tПриорітет:\", priority)\n",
+        "  \n",
         "\n",
         "controlEngine(1,\"реактор\")\n",
         "controlEngine(1,\"реактор\",\"запуск\")\n",
         "controlEngine(1,\"реактор\", priority=\"звичайний\")\n",
         "controlEngine(operation = \"запуск\", id = 1,name = \"реактор\", priority = \"звичайний\")"
-      ],
-      "execution_count": 42,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Агрегат: реактор # 1 \n",
-            "\tОбрана операція: стоп \n",
-            "\tПриорітет: високий\n",
-            "Агрегат: реактор # 1 \n",
-            "\tОбрана операція: запуск \n",
-            "\tПриорітет: високий\n",
-            "Агрегат: реактор # 1 \n",
-            "\tОбрана операція: стоп \n",
-            "\tПриорітет: звичайний\n",
-            "Агрегат: реактор # 1 \n",
-            "\tОбрана операція: запуск \n",
-            "\tПриорітет: звичайний\n"
-          ]
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "name": "4_Функції",
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.8"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
